--- a/index.qmd
+++ b/index.qmd
@@ -11,7 +11,7 @@ about:
       text: Github
       href: https://github.com
     - text: CV
-      file: Materials/"Selina Zhu Resume (May 2025).pdf"
+      file: Materials/cv.pdf
 ---
 
 This is a Quarto website.
